--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   @apply w-full text-sm font-medium p-3 text-white bg-primary shadow-lg shadow-purple-600/5 rounded-md my-1 hover:bg-blue-600/15 hover:text-blue-600 transition ease-linear cursor-pointer;
 }
 
+.card {
+  @apply bg-white p-6 rounded-2xl shadow-md shadow-gray-100 border border-gray-200/50;
+}
+
 @keyframes shake {
   0%, 100% { transform: translateX(0); }
   25% { transform: translateX(-5px); }
